feat(core): add OIDC sign-in via device flow (RFC 8628) (#52)